package io.silky;

public interface SortingStrategy {
    void sort(int[] data);
}
